--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <title></title>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preload" href="./res/fonts/cafeta/Cafeta.woff2" as="font" type="font/woff2">
+    <link rel="preload" href="./res/fonts/lato/Lato.woff2" as="font" type="font/woff2">
+    <link rel="preload" href="./res/fonts/barkelia/Barkelia.ttf" as="font" type="font/ttf">
+
     <link rel="stylesheet" type="text/css" href="./css/index.css">
     <link rel="icon" type="ico" href="">
     <script src="./js/classSchedule.js"></script>
