--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="preload" href="./res/fonts/cafeta/Cafeta.woff2" as="font" type="font/woff2">
-    <link rel="preload" href="./res/fonts/lato/Lato.woff2" as="font" type="font/woff2">
-    <link rel="preload" href="./res/fonts/barkelia/Barkelia.ttf" as="font" type="font/ttf">
+    <link rel="preload" href="./res/fonts/cafeta/Cafeta.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="./res/fonts/lato/Lato.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="./res/fonts/barkelia/Barkelia.ttf" as="font" type="font/ttf" crossorigin>
 
     <link rel="stylesheet" type="text/css" href="./css/index.css">
     <link rel="icon" type="ico" href="">
