preload and stuff

--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title></title>
+    <title>ABC | Adult Ballet Community</title>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="preload" href="./res/fonts/cafeta/Cafeta.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="./css/index.css" as="style">
+    <link rel="preload" href="./res/fonts/cafeta/Cafeta.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="preload" href="./res/fonts/lato/Lato.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="./res/fonts/barkelia/Barkelia.ttf" as="font" type="font/ttf" crossorigin>
 
     <link rel="stylesheet" type="text/css" href="./css/index.css">
-    <link rel="icon" type="ico" href="">
+    <link rel="icon" type="ico" href="./res/img/ABC_icon.ico">
     <script src="./js/classSchedule.js"></script>
   </head>
   <style>
@@ -19,11 +20,20 @@
   <body>
     <div class="bg bg1">
       <div class="centre floatingPara">
-	<h1 class="logo"><span class="studio">studio</span><span class="twobor">TuBOR</span></h1>
+	<h1 class="logo"><span class="adult">ADULT</span><span class="ballet1">Ballet</span><span class="ballet">Ballet</span><br><span class="community">COMMUNITY</span></h1>
       </div>
     </div>
     <div class="section schedule">
       <h1 class="sectionTitle">Schedule</h1>
+<!-- OPTION FOR DISPLAY BY TEACHER/DAYS
+	<p>by</p>
+	<select>
+	  <option>Teacher</option>
+	  <option>Day</option>
+	</select>
+-->
+	<br>
+	<p class="currency">This schedule is correct as of 11pm Sunday 30<sup>th</sup> Oct</p>
     </div>
     <div class="bg bg2">
     </div>
