--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="preload" href="./css/index.css" as="style">
-    <link rel="preload" href="./res/fonts/cafeta/Cafeta.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="./res/fonts/english/English.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="./res/fonts/cafeta/Cafeta.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="./res/fonts/lato/Lato.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="./res/fonts/barkelia/Barkelia.ttf" as="font" type="font/ttf" crossorigin>
 
