--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	</select>
       </div>
       <br>
-      <p class="currency">This schedule is correct as of 3pm Monday 31<sup>st</sup> Oct</p>
+      <p class="currency">This schedule is correct as of 6pm Tuesday 8<sup>th</sup> Nov</p>
     </div>
 
     <div class="bg bg2"></div>
