--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	</select>
       </div>
       <br>
-      <p class="currency">This schedule is correct as of 6pm Tuesday 8<sup>th</sup> Nov</p>
+      <p class="currency">This schedule is correct as of 10am Thursday 10<sup>th</sup> Nov</p>
     </div>
 
     <div class="bg bg2"></div>
