--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	</select>
       </div>
       <br>
-      <p class="currency">This schedule is correct as of 10am Monday 14<sup>th</sup> Nov</p>
+      <p class="currency">This schedule is correct as of 12 noon, Wednesday 18/01/23</p>
     </div>
 
     <div class="bg bg2"></div>
